--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1483,7 @@
        "35354"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1601,77 +1601,375 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Simplify classification by usng regex (replace word after \"/\" and in parentheses)\n",
     "pattern = r'([^(/\\s(]+)'\n",
-    "df_meta['simple_class'] = df_meta['classification'].str.extract(pattern, expand=False)"
+    "df_meta['simple_class'] = df_meta['classification'].str.extract(pattern, expand=False)\n",
+    "\n",
+    "# Use only top 30 classification\n",
+    "temp_class = df_meta['simple_class'].value_counts(ascending=False)[:30].index\n",
+    "\n",
+    "# Change anothe classification not top 30 into other\n",
+    "df_meta.loc[~df_meta['simple_class'].isin(temp_class), 'simple_class'] = 'OTHER'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Drop unnecessary columns because of many missing values and not related to classification\n",
+    "df_meta = df_meta.drop(columns=['classification', 'publicationYear', 'pdbxDetails', 'crystallizationMethod'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Modelling"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pycaret.classification import *"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = df_meta.iloc[:, 1:]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>experimentalTechnique</th>\n",
+       "      <th>macromoleculeType</th>\n",
+       "      <th>residueCount</th>\n",
+       "      <th>resolution</th>\n",
+       "      <th>structureMolecularWeight</th>\n",
+       "      <th>crystallizationTempK</th>\n",
+       "      <th>densityMatthews</th>\n",
+       "      <th>densityPercentSol</th>\n",
+       "      <th>phValue</th>\n",
+       "      <th>simple_class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>X-RAY DIFFRACTION</td>\n",
+       "      <td>DNA/RNA HYBRID</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>6360.30</td>\n",
+       "      <td>293.0</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>30.89</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>OTHER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>X-RAY DIFFRACTION</td>\n",
+       "      <td>DNA</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>7939.35</td>\n",
+       "      <td>291.5</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>38.45</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>DNA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>X-RAY DIFFRACTION</td>\n",
+       "      <td>PROTEIN</td>\n",
+       "      <td>154</td>\n",
+       "      <td>2.07</td>\n",
+       "      <td>18112.80</td>\n",
+       "      <td>293.0</td>\n",
+       "      <td>3.09</td>\n",
+       "      <td>60.20</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>OXYGEN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>X-RAY DIFFRACTION</td>\n",
+       "      <td>DNA</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>7637.17</td>\n",
+       "      <td>277.0</td>\n",
+       "      <td>2.28</td>\n",
+       "      <td>46.06</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>DNA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>X-RAY DIFFRACTION</td>\n",
+       "      <td>PROTEIN</td>\n",
+       "      <td>165</td>\n",
+       "      <td>1.74</td>\n",
+       "      <td>18926.61</td>\n",
+       "      <td>293.0</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>55.28</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>HYDROLASE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  experimentalTechnique macromoleculeType  residueCount  resolution  \\\n",
+       "0     X-RAY DIFFRACTION    DNA/RNA HYBRID            20        1.90   \n",
+       "1     X-RAY DIFFRACTION               DNA            24        2.25   \n",
+       "2     X-RAY DIFFRACTION           PROTEIN           154        2.07   \n",
+       "3     X-RAY DIFFRACTION               DNA            24        2.20   \n",
+       "4     X-RAY DIFFRACTION           PROTEIN           165        1.74   \n",
+       "\n",
+       "   structureMolecularWeight  crystallizationTempK  densityMatthews  \\\n",
+       "0                   6360.30                 293.0             1.78   \n",
+       "1                   7939.35                 291.5             2.00   \n",
+       "2                  18112.80                 293.0             3.09   \n",
+       "3                   7637.17                 277.0             2.28   \n",
+       "4                  18926.61                 293.0             2.75   \n",
+       "\n",
+       "   densityPercentSol  phValue simple_class  \n",
+       "0              30.89      7.0        OTHER  \n",
+       "1              38.45      7.0          DNA  \n",
+       "2              60.20      9.0       OXYGEN  \n",
+       "3              46.06      7.0          DNA  \n",
+       "4              55.28      7.0    HYDROLASE  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(5)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "91914a9b1bb2499caa93aa228b1f43ac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=0, description='Processing: ', max=3)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Initiated</th>\n",
+       "      <td>. . . . . . . . . . . . . . . . . .</td>\n",
+       "      <td>14:00:28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Status</th>\n",
+       "      <td>. . . . . . . . . . . . . . . . . .</td>\n",
+       "      <td>Preprocessing Data</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                  \n",
+       "                                                                  \n",
+       "Initiated  . . . . . . . . . . . . . . . . . .            14:00:28\n",
+       "Status     . . . . . . . . . . . . . . . . . .  Preprocessing Data"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a4aced5040f43e6a6a9a5969cb421b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value=\"Following data types have been inferred automatically, if they are correct press enter to continue…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>experimentalTechnique</th>\n",
+       "      <td>Categorical</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>macromoleculeType</th>\n",
+       "      <td>Categorical</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>residueCount</th>\n",
+       "      <td>Numeric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>resolution</th>\n",
+       "      <td>Numeric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>structureMolecularWeight</th>\n",
+       "      <td>Numeric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>crystallizationTempK</th>\n",
+       "      <td>Numeric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>densityMatthews</th>\n",
+       "      <td>Numeric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>densityPercentSol</th>\n",
+       "      <td>Numeric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>phValue</th>\n",
+       "      <td>Numeric</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>simple_class</th>\n",
+       "      <td>Label</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            Data Type\n",
+       "experimentalTechnique     Categorical\n",
+       "macromoleculeType         Categorical\n",
+       "residueCount                  Numeric\n",
+       "resolution                    Numeric\n",
+       "structureMolecularWeight      Numeric\n",
+       "crystallizationTempK          Numeric\n",
+       "densityMatthews               Numeric\n",
+       "densityPercentSol             Numeric\n",
+       "phValue                       Numeric\n",
+       "simple_class                    Label"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "exp_name = setup(data=data,  target='simple_class', session_id=123)\n",
+    "best_model = compare_models(budget_time=5)"
+   ]
   },
   {
    "cell_type": "code",
